Fixed main nav horizontal scroll bar

--- a/assets/stylesheets/layout.scss
+++ b/assets/stylesheets/layout.scss
@@ -26,6 +26,7 @@ $gutter: 1rem;
 // Grid system
 .container {
     width: 100%;
+    height: 100%;
     padding-left: $gutter / 2;
     padding-right: $gutter / 2;
     box-sizing: border-box;
